# atomix_cpp

./: CMakeLists.txt
assets/images/: resize-to.sh
assets/niveaux/: atomix.ldtk  level_0.json  level_1.json
assets/niveaux/atomix/: Level_0.ldtkl  Level_1.ldtkl
scripts/: convert_ldtk_json.ts
src/: atom.cpp  atom.hpp  atomix.hpp  atomixRaylib.cpp  atomixRaylib.hpp  levelLoader.hpp  main.cpp  painter.hpp  partie.cpp  partie.hpp
src/atomixRaylib/: partieObserver.cpp
